--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "mongoose": "^8.10.1"
   }
 }
